--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 Трехмесячный бесплатный учебный курс от Финтеха, который можно
                 проходить из любой точки России
               </p>
-              <a href="" class="button">Подать заявку</a>
+              <button href="" class="button">Подать заявку</button>
             </div>
             <div class="course-preview__img-box">
               <img src="./assets/images/frontend.png" alt="" />
@@ -354,7 +354,7 @@
                       <a href="#!">условиями передачи информации</a>
                     </p>
                   </div>
-                  <a href="#!" class="button">Отправить</a>
+                  <button href="#!" class="button">Отправить</button>
                 </div>
               </form>
             </div>
